--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ a {
 
 .header-logo .logo-part {
     color: #2e2f42;
-}
+} 
 
 .footer-logo {
     margin-bottom: 16px;
@@ -54,7 +54,7 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42; 
+    color: #434455; 
 }
 
 .nav-link:hover,
@@ -70,7 +70,7 @@ a {
 
 .sct-one-text {
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
@@ -78,6 +78,7 @@ a {
 
 .sct-one-btn {
     font-family: inherit;
+    font-weight: 500;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     border-radius: 4px;
@@ -94,19 +95,28 @@ a {
     color: #2e2f42;
 }
 
+.sct-two-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
 .main-sct-three {
     background-color: #f4f4fd;
 }
 
 .sct-three-headline {
+
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
 }
 
 .sct-three-text {
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
@@ -114,21 +124,49 @@ a {
     color: #2e2f42;
 }
 
-.sct-four-headline {
-    font-size: 36px;
-    line-height: 1.1;
+.sct-three-p {
+    font-size: 16px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
+
+
+.sct-four-headline {
+    text-transform: capitalize;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     text-align: center;
     color: #2e2f42;
 }
 
 .sct-four-text {
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
+.sct-four-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
 .page-footer {
     background-color: #2e2f42;
+}  
+
+
+
+.footer-p {
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
 }
