--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,6 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
 }
 
@@ -120,7 +119,7 @@ a {
     color: #2e2f42;
 }
 
-.sct-three-list {
+.sct-three-item {
     background-color: #FFFFFF;
 }
 
